# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py
brain_games/games/: calc.py  even.py  prime.py  progression.py
brain_games/scripts/: brain_even.py
